src/App.css
body {
  font-family: Georgia;
  overflow-x: hidden;
}

a {
  text-decoration: none;
  color: gray;
}

a:hover {
  text-decoration: none;
  color: gray;
}

/* Vertically Align Centre */
.outer {
  display: table;
  height: 100%;
  width: 100%;
}

.middle {
  display: table-cell;
  vertical-align: middle;
}

.inner {
  margin-left: auto;
  margin-right: auto;
  height: auto;
  width: 100%;
  /* max-width: 400px; */
}

/* Vertically Alligned CSS Ends */
.navbar {
  background-color: white;
}

#navbarNavDropdown {
  text-align: center;
}

.imgfix {
  width: 100%;
  height: auto;
}

.text-reset {
  text-decoration: none;
}

#animateimg {
  animation: up-down 2s ease-in-out infinite alternate-reverse both;
}

.menu_active {
  display: block;
  padding: .5rem 1rem;
  font-weight: bold;
  text-decoration: none;
  color: #F53803;
}

.menu_active:hover {
  color: #F53803;
}

.nav-link {
  color: black !important;
}

@-webkit-keyframes up-down {
  0% {
    transform: translateY(10px);
  }

  100% {
    transform: translateY(-10px);
  }
}

@keyframes up-down {
  0% {
    transform: translateY(10px);
  }

  100% {
    transform: translateY(-10px);
  }
}

#footer {
  text-align: center;
}

#copyright-text {
  background-color: rgba(0, 0, 0, 0.025);
}
#footer
{
  bottom: 0;
}
@media screen and (max-width: 800px) {
  #home h1
  {
    font-size: 24px;
  }
  #home h5
  {
    font-size: 14px;
  }
}

